fixing alignment of arrow bottom and top of popover.

--- a/source/assets/stylesheets/locastyle/modules/_popover.sass
+++ b/source/assets/stylesheets/locastyle/modules/_popover.sass
@@ -37,14 +37,14 @@ $colorBorderPop: rgba(0, 0, 0, 0.2)
   &.ls-popover-top
     &:after
       bottom: -$arrowWidth
-      left: 50%
+      left: 46.5%
       margin-left: -8px
       border-width: $arrowWidth $arrowWidth 0 $arrowWidth
       border-color: $colorArrow transparent transparent transparent
 
     &:before
       bottom: -($arrowWidth - 1)
-      left: 50%
+      left: 46.5%
       margin-left: -8px
       border-width: $arrowWidth $arrowWidth 0 $arrowWidth
       border-color: $colorArrow transparent transparent transparent
@@ -67,13 +67,13 @@ $colorBorderPop: rgba(0, 0, 0, 0.2)
   &.ls-popover-bottom
     &:after
       top: -$arrowWidth
-      left: 50%
+      left: 46.5%
       border-width: 0 $arrowWidth $arrowWidth $arrowWidth
       border-color: transparent transparent #f7f7f7 transparent
 
     &:before
       top: -($arrowWidth + 1)
-      left: 50%
+      left: 46.5%
       border-width: 0 $arrowWidth $arrowWidth $arrowWidth
       border-color: transparent transparent $colorBorderPop transparent
 
